--- a/.babelrc
+++ b/.babelrc
@@ -1,18 +1,13 @@
 {
-  "presets": [
-    ["env", {
-      "modules": false,
-      "targets": {
-        "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
-      }
-    }],
-    "stage-2"
+  "presets": ["es2015", "stage-2"],
+  "plugins": [
+    "transform-es2015-destructuring",
+    "transform-object-rest-spread"
   ],
-  "plugins": ["transform-runtime"],
+  "comments": false,
   "env": {
     "test": {
-      "presets": ["env", "stage-2"],
-      "plugins": ["istanbul"]
+      "plugins": [ "istanbul" ]
     }
   }
 }
