--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "vue": "^2.4.2"
+    "vue": "^2.4.2",
+    "font-awesome": "^4.7.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -58,7 +59,6 @@
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
-    "font-awesome": "^4.7.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.3",
